--- a/weitaixin/src/main/res/layout/activity_pay_affirm_payment.xml
+++ b/weitaixin/src/main/res/layout/activity_pay_affirm_payment.xml
@@ -11,9 +11,9 @@
 
 
     <RelativeLayout
-        android:id="@+id/rl1Function"
+        android:id="@+id/rl1Functioned"
         android:layout_width="match_parent"
-        android:layout_height="67dp"
+        android:layout_height="wrap_content"
         android:layout_below="@id/head_title_id"
         android:layout_marginTop="2dp"
         android:background="@color/white0">
@@ -26,38 +26,42 @@
             android:layout_marginTop="14dp"
             android:text="需支付"
             android:textColor="@color/red3"
-            android:textSize="@dimen/font10" />
+            android:textSize="@dimen/font12" />
 
         <TextView
+            android:id="@+id/tvTotalPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/tvPayTip"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="8dp"
+            android:paddingBottom="10dp"
             android:text="￥76"
             android:textColor="@color/red0"
-            android:textSize="@dimen/font22" />
+            android:textSize="@dimen/font50" />
 
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/rl1Function"
+        android:layout_below="@id/rl1Functioned"
         android:layout_marginTop="10dp"
         android:background="@color/white0">
 
         <RelativeLayout
             android:id="@+id/rl2Function"
             android:layout_width="wrap_content"
-            android:layout_centerHorizontal="true"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
             android:background="@color/white0">
 
             <LinearLayout
                 android:id="@+id/llPaymenyWeixin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
                 android:layout_marginTop="26dp"
                 android:gravity="center"
                 android:orientation="vertical">
@@ -74,15 +78,18 @@
                     android:layout_marginTop="12dp"
                     android:text="微信支付"
                     android:textColor="@color/gray12"
-                    android:textSize="@dimen/font10" />
+                    android:textSize="@dimen/font12" />
             </LinearLayout>
 
 
             <LinearLayout
+                android:id="@+id/llPaymenyTaoBao"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="40dp"
+                android:layout_marginLeft="30dp"
                 android:layout_marginTop="26dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
                 android:layout_toRightOf="@id/llPaymenyWeixin"
                 android:gravity="center"
                 android:orientation="vertical">
@@ -97,20 +104,23 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
-                    android:text="微信支付"
+                    android:text="支付宝支付"
                     android:textColor="@color/gray12"
-                    android:textSize="@dimen/font10" />
+                    android:textSize="@dimen/font12" />
             </LinearLayout>
         </RelativeLayout>
 
 
         <LinearLayout
+            android:id="@+id/llPaymenyUnionPay"
             android:layout_width="wrap_content"
-            android:layout_below="@id/rl2Function"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="34dp"
-            android:layout_marginTop="24dp"
+            android:layout_below="@id/rl2Function"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
             android:layout_centerHorizontal="true"
+            android:paddingBottom="34dp"
+            android:layout_marginTop="24dp"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -126,9 +136,11 @@
                 android:layout_marginTop="12dp"
                 android:text="银联支付"
                 android:textColor="@color/gray12"
-                android:textSize="@dimen/font10" />
+                android:textSize="@dimen/font12" />
         </LinearLayout>
+
     </RelativeLayout>
+
 
 </RelativeLayout>
 
