--- a/weitaixin/src/main/res/values/colors.xml
+++ b/weitaixin/src/main/res/values/colors.xml
@@ -41,7 +41,7 @@
     <color name="black1">#FF000000</color>
     <color name="black2">#FF353330</color>
     <color name="black3">#FF2E2E2E</color>
-    <color name="red0">#FFFE0058</color>d
+    <color name="red0">#FFFE0058</color>
     <color name="red1">#FFea5550</color>
     <color name="red2">#FFee4f4e</color>
     <color name="red3">#FFFE2E62</color>
