--- a/weitaixin/src/main/res/layout/activity_pay_city_choose.xml
+++ b/weitaixin/src/main/res/layout/activity_pay_city_choose.xml
@@ -9,13 +9,26 @@
         android:id="@+id/head_title_id"
         layout="@layout/layout_title" />
 
-    <ListView
-        android:id="@+id/lvCityChoose"
+    <LinearLayout
         android:layout_below="@id/head_title_id"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    </ListView>
+        <FrameLayout
+            android:id="@+id/rlLeftCity"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+        <FrameLayout
+            android:id="@+id/rlRightCity"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+    </LinearLayout>
+
 </RelativeLayout>
 
 
