增加部分播放曲线 调整数据解析的逻辑 优化蓝牙连接过程

--- a/weitaixin/src/main/res/layout/layout_title.xml
+++ b/weitaixin/src/main/res/layout/layout_title.xml
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="手机号注册"
+        android:text="标题"
         android:textColor="@color/font_color"
         android:textSize="@dimen/font_title"/>
 
