--- a/weitaixin/src/main/res/layout/activity_monitor.xml
+++ b/weitaixin/src/main/res/layout/activity_monitor.xml
@@ -93,7 +93,7 @@
 
 
     <RelativeLayout
-        android:id="@+id/rl_movement"
+        android:id="@+id/rl_function"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
