--- a/weitaixin/src/main/res/layout/activity_monitor_detial.xml
+++ b/weitaixin/src/main/res/layout/activity_monitor_detial.xml
@@ -99,7 +99,7 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/rl_movement"
+        android:id="@+id/rl_function"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
